Add synchronised buffer implementation as a plugin

--- a/settings.gradle
+++ b/settings.gradle
@@ -123,6 +123,7 @@ include 'data-prepper-plugins:otel-metrics-raw-processor'
 include 'data-prepper-plugins:otel-logs-source'
 include 'data-prepper-plugins:otlp-source'
 include 'data-prepper-plugins:blocking-buffer'
+include 'data-prepper-plugins:synchronised-buffer'
 include 'data-prepper-plugins:http-source'
 include 'data-prepper-plugins:drop-events-processor'
 include 'data-prepper-plugins:event-json-codecs'
@@ -201,4 +202,4 @@ include 'data-prepper-plugins:saas-source-plugins:atlassian-commons'
 include 'data-prepper-plugins:saas-source-plugins:crowdstrike-source'
 include 'data-prepper-plugins:saas-source-plugins:microsoft-office365-source'
 include 'data-prepper-plugins:otlp-sink'
-
+include 'data-prepper-plugins:synchronized-buffer'
